fixed navbar shift on contact

--- a/contact/contact.css
+++ b/contact/contact.css
@@ -13,7 +13,6 @@ html {
     position:fixed;
     top: 0;
 	width: 100vw;
-	padding-left: 0.8vw
 }
 
 .logo{
